# metalware-sdk

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/elf_image/: main.py  simple-loop.elf
examples/raw_image_multi_rom/: main.py
examples/testcase_dump/: README.md
examples/testcases/: README.md  main.py
src/metalware_sdk/: __init__.py  havoc_client.py  havoc_common_schema.py  replay_debugger.py  test_debugger.py  test_havoc.py  test_inference.py  test_user_flows.py
